work with project members
